# etebase-rs

./: .gitignore  Cargo.toml
src/: crypto.rs  encrypted_models.rs  error.rs  lib.rs  service.rs  utils.rs
tests/: service.rs
